parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DBEQUAL
    DBMINUS
    DBPLUS
    NEQUAL

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     statement -> function_def
Rule 4     statement -> if_statement
Rule 5     statement -> for_statement
Rule 6     statement -> while_statement
Rule 7     statement -> print_statement
Rule 8     statement -> assignment_statement
Rule 9     function_def -> DEF ID LPAREN parameters RPAREN COLON block
Rule 10    parameters -> ID
Rule 11    parameters -> parameters COMMA ID
Rule 12    parameters -> <empty>
Rule 13    if_statement -> IF expression COLON block elif_statements else_statement
Rule 14    elif_statements -> ELIF expression COLON block elif_statements
Rule 15    elif_statements -> <empty>
Rule 16    else_statement -> ELSE COLON block
Rule 17    else_statement -> <empty>
Rule 18    for_statement -> FOR ID IN RANGE LPAREN expression RPAREN COLON block
Rule 19    while_statement -> WHILE expression COLON block
Rule 20    print_statement -> PRINT LPAREN print_arguments RPAREN
Rule 21    print_arguments -> expression
Rule 22    print_arguments -> print_arguments COMMA expression
Rule 23    assignment_statement -> ID ASSIGN expression
Rule 24    assignment_statement -> ID PLEQUAL expression
Rule 25    assignment_statement -> ID MIEQUAL expression
Rule 26    assignment_statement -> ID MTEQUAL expression
Rule 27    assignment_statement -> ID DIEQUAL expression
Rule 28    assignment_statement -> ID MOEQUAL expression
Rule 29    expression -> ID
Rule 30    expression -> NUMBER
Rule 31    expression -> STRING
Rule 32    expression -> expression PLUS expression
Rule 33    expression -> expression MINUS expression
Rule 34    expression -> expression MULT expression
Rule 35    expression -> expression DIV expression
Rule 36    expression -> expression MOD expression
Rule 37    expression -> expression EQ expression
Rule 38    expression -> expression NE expression
Rule 39    expression -> expression GT expression
Rule 40    expression -> expression LT expression
Rule 41    block -> statement
Rule 42    block -> block statement

Terminals, with rules where they appear

ASSIGN               : 23
COLON                : 9 13 14 16 18 19
COMMA                : 11 22
DBEQUAL              : 
DBMINUS              : 
DBPLUS               : 
DEF                  : 9
DIEQUAL              : 27
DIV                  : 35
ELIF                 : 14
ELSE                 : 16
EQ                   : 37
FOR                  : 18
GT                   : 39
ID                   : 9 10 11 18 23 24 25 26 27 28 29
IF                   : 13
IN                   : 18
LPAREN               : 9 18 20
LT                   : 40
MIEQUAL              : 25
MINUS                : 33
MOD                  : 36
MOEQUAL              : 28
MTEQUAL              : 26
MULT                 : 34
NE                   : 38
NEQUAL               : 
NUMBER               : 30
PLEQUAL              : 24
PLUS                 : 32
PRINT                : 20
RANGE                : 18
RPAREN               : 9 18 20
STRING               : 31
WHILE                : 19
error                : 

Nonterminals, with rules where they appear

assignment_statement : 8
block                : 9 13 14 16 18 19 42
elif_statements      : 13 14
else_statement       : 13
expression           : 13 14 18 19 21 22 23 24 25 26 27 28 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40
for_statement        : 5
function_def         : 3
if_statement         : 4
parameters           : 9 11
print_arguments      : 20 22
print_statement      : 7
program              : 2 0
statement            : 1 2 41 42
while_statement      : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (3) statement -> . function_def
    (4) statement -> . if_statement
    (5) statement -> . for_statement
    (6) statement -> . while_statement
    (7) statement -> . print_statement
    (8) statement -> . assignment_statement
    (9) function_def -> . DEF ID LPAREN parameters RPAREN COLON block
    (13) if_statement -> . IF expression COLON block elif_statements else_statement
    (18) for_statement -> . FOR ID IN RANGE LPAREN expression RPAREN COLON block
    (19) while_statement -> . WHILE expression COLON block
    (20) print_statement -> . PRINT LPAREN print_arguments RPAREN
    (23) assignment_statement -> . ID ASSIGN expression
    (24) assignment_statement -> . ID PLEQUAL expression
    (25) assignment_statement -> . ID MIEQUAL expression
    (26) assignment_statement -> . ID MTEQUAL expression
    (27) assignment_statement -> . ID DIEQUAL expression
    (28) assignment_statement -> . ID MOEQUAL expression

    DEF             shift and go to state 9
    IF              shift and go to state 11
    FOR             shift and go to state 12
    WHILE           shift and go to state 13
    PRINT           shift and go to state 14
    ID              shift and go to state 10

    program                        shift and go to state 1
    statement                      shift and go to state 2
    function_def                   shift and go to state 3
    if_statement                   shift and go to state 4
    for_statement                  shift and go to state 5
    while_statement                shift and go to state 6
    print_statement                shift and go to state 7
    assignment_statement           shift and go to state 8

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (3) statement -> . function_def
    (4) statement -> . if_statement
    (5) statement -> . for_statement
    (6) statement -> . while_statement
    (7) statement -> . print_statement
    (8) statement -> . assignment_statement
    (9) function_def -> . DEF ID LPAREN parameters RPAREN COLON block
    (13) if_statement -> . IF expression COLON block elif_statements else_statement
    (18) for_statement -> . FOR ID IN RANGE LPAREN expression RPAREN COLON block
    (19) while_statement -> . WHILE expression COLON block
    (20) print_statement -> . PRINT LPAREN print_arguments RPAREN
    (23) assignment_statement -> . ID ASSIGN expression
    (24) assignment_statement -> . ID PLEQUAL expression
    (25) assignment_statement -> . ID MIEQUAL expression
    (26) assignment_statement -> . ID MTEQUAL expression
    (27) assignment_statement -> . ID DIEQUAL expression
    (28) assignment_statement -> . ID MOEQUAL expression

    DEF             shift and go to state 9
    IF              shift and go to state 11
    FOR             shift and go to state 12
    WHILE           shift and go to state 13
    PRINT           shift and go to state 14
    ID              shift and go to state 10

    statement                      shift and go to state 15
    function_def                   shift and go to state 3
    if_statement                   shift and go to state 4
    for_statement                  shift and go to state 5
    while_statement                shift and go to state 6
    print_statement                shift and go to state 7
    assignment_statement           shift and go to state 8

state 2

    (1) program -> statement .

    DEF             reduce using rule 1 (program -> statement .)
    IF              reduce using rule 1 (program -> statement .)
    FOR             reduce using rule 1 (program -> statement .)
    WHILE           reduce using rule 1 (program -> statement .)
    PRINT           reduce using rule 1 (program -> statement .)
    ID              reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)


state 3

    (3) statement -> function_def .

    DEF             reduce using rule 3 (statement -> function_def .)
    IF              reduce using rule 3 (statement -> function_def .)
    FOR             reduce using rule 3 (statement -> function_def .)
    WHILE           reduce using rule 3 (statement -> function_def .)
    PRINT           reduce using rule 3 (statement -> function_def .)
    ID              reduce using rule 3 (statement -> function_def .)
    $end            reduce using rule 3 (statement -> function_def .)
    ELIF            reduce using rule 3 (statement -> function_def .)
    ELSE            reduce using rule 3 (statement -> function_def .)


state 4

    (4) statement -> if_statement .

    DEF             reduce using rule 4 (statement -> if_statement .)
    IF              reduce using rule 4 (statement -> if_statement .)
    FOR             reduce using rule 4 (statement -> if_statement .)
    WHILE           reduce using rule 4 (statement -> if_statement .)
    PRINT           reduce using rule 4 (statement -> if_statement .)
    ID              reduce using rule 4 (statement -> if_statement .)
    $end            reduce using rule 4 (statement -> if_statement .)
    ELIF            reduce using rule 4 (statement -> if_statement .)
    ELSE            reduce using rule 4 (statement -> if_statement .)


state 5

    (5) statement -> for_statement .

    DEF             reduce using rule 5 (statement -> for_statement .)
    IF              reduce using rule 5 (statement -> for_statement .)
    FOR             reduce using rule 5 (statement -> for_statement .)
    WHILE           reduce using rule 5 (statement -> for_statement .)
    PRINT           reduce using rule 5 (statement -> for_statement .)
    ID              reduce using rule 5 (statement -> for_statement .)
    $end            reduce using rule 5 (statement -> for_statement .)
    ELIF            reduce using rule 5 (statement -> for_statement .)
    ELSE            reduce using rule 5 (statement -> for_statement .)


state 6

    (6) statement -> while_statement .

    DEF             reduce using rule 6 (statement -> while_statement .)
    IF              reduce using rule 6 (statement -> while_statement .)
    FOR             reduce using rule 6 (statement -> while_statement .)
    WHILE           reduce using rule 6 (statement -> while_statement .)
    PRINT           reduce using rule 6 (statement -> while_statement .)
    ID              reduce using rule 6 (statement -> while_statement .)
    $end            reduce using rule 6 (statement -> while_statement .)
    ELIF            reduce using rule 6 (statement -> while_statement .)
    ELSE            reduce using rule 6 (statement -> while_statement .)


state 7

    (7) statement -> print_statement .

    DEF             reduce using rule 7 (statement -> print_statement .)
    IF              reduce using rule 7 (statement -> print_statement .)
    FOR             reduce using rule 7 (statement -> print_statement .)
    WHILE           reduce using rule 7 (statement -> print_statement .)
    PRINT           reduce using rule 7 (statement -> print_statement .)
    ID              reduce using rule 7 (statement -> print_statement .)
    $end            reduce using rule 7 (statement -> print_statement .)
    ELIF            reduce using rule 7 (statement -> print_statement .)
    ELSE            reduce using rule 7 (statement -> print_statement .)


state 8

    (8) statement -> assignment_statement .

    DEF             reduce using rule 8 (statement -> assignment_statement .)
    IF              reduce using rule 8 (statement -> assignment_statement .)
    FOR             reduce using rule 8 (statement -> assignment_statement .)
    WHILE           reduce using rule 8 (statement -> assignment_statement .)
    PRINT           reduce using rule 8 (statement -> assignment_statement .)
    ID              reduce using rule 8 (statement -> assignment_statement .)
    $end            reduce using rule 8 (statement -> assignment_statement .)
    ELIF            reduce using rule 8 (statement -> assignment_statement .)
    ELSE            reduce using rule 8 (statement -> assignment_statement .)


state 9

    (9) function_def -> DEF . ID LPAREN parameters RPAREN COLON block

    ID              shift and go to state 16


state 10

    (23) assignment_statement -> ID . ASSIGN expression
    (24) assignment_statement -> ID . PLEQUAL expression
    (25) assignment_statement -> ID . MIEQUAL expression
    (26) assignment_statement -> ID . MTEQUAL expression
    (27) assignment_statement -> ID . DIEQUAL expression
    (28) assignment_statement -> ID . MOEQUAL expression

    ASSIGN          shift and go to state 17
    PLEQUAL         shift and go to state 18
    MIEQUAL         shift and go to state 19
    MTEQUAL         shift and go to state 20
    DIEQUAL         shift and go to state 21
    MOEQUAL         shift and go to state 22


state 11

    (13) if_statement -> IF . expression COLON block elif_statements else_statement
    (29) expression -> . ID
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression MULT expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LT expression

    ID              shift and go to state 24
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26

    expression                     shift and go to state 23

state 12

    (18) for_statement -> FOR . ID IN RANGE LPAREN expression RPAREN COLON block

    ID              shift and go to state 27


state 13

    (19) while_statement -> WHILE . expression COLON block
    (29) expression -> . ID
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression MULT expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LT expression

    ID              shift and go to state 24
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26

    expression                     shift and go to state 28

state 14

    (20) print_statement -> PRINT . LPAREN print_arguments RPAREN

    LPAREN          shift and go to state 29


state 15

    (2) program -> program statement .

    DEF             reduce using rule 2 (program -> program statement .)
    IF              reduce using rule 2 (program -> program statement .)
    FOR             reduce using rule 2 (program -> program statement .)
    WHILE           reduce using rule 2 (program -> program statement .)
    PRINT           reduce using rule 2 (program -> program statement .)
    ID              reduce using rule 2 (program -> program statement .)
    $end            reduce using rule 2 (program -> program statement .)


state 16

    (9) function_def -> DEF ID . LPAREN parameters RPAREN COLON block

    LPAREN          shift and go to state 30


state 17

    (23) assignment_statement -> ID ASSIGN . expression
    (29) expression -> . ID
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression MULT expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LT expression

    ID              shift and go to state 24
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26

    expression                     shift and go to state 31

state 18

    (24) assignment_statement -> ID PLEQUAL . expression
    (29) expression -> . ID
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression MULT expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LT expression

    ID              shift and go to state 24
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26

    expression                     shift and go to state 32

state 19

    (25) assignment_statement -> ID MIEQUAL . expression
    (29) expression -> . ID
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression MULT expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LT expression

    ID              shift and go to state 24
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26

    expression                     shift and go to state 33

state 20

    (26) assignment_statement -> ID MTEQUAL . expression
    (29) expression -> . ID
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression MULT expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LT expression

    ID              shift and go to state 24
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26

    expression                     shift and go to state 34

state 21

    (27) assignment_statement -> ID DIEQUAL . expression
    (29) expression -> . ID
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression MULT expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LT expression

    ID              shift and go to state 24
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26

    expression                     shift and go to state 35

state 22

    (28) assignment_statement -> ID MOEQUAL . expression
    (29) expression -> . ID
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression MULT expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LT expression

    ID              shift and go to state 24
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26

    expression                     shift and go to state 36

state 23

    (13) if_statement -> IF expression . COLON block elif_statements else_statement
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . MULT expression
    (35) expression -> expression . DIV expression
    (36) expression -> expression . MOD expression
    (37) expression -> expression . EQ expression
    (38) expression -> expression . NE expression
    (39) expression -> expression . GT expression
    (40) expression -> expression . LT expression

    COLON           shift and go to state 37
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    MULT            shift and go to state 40
    DIV             shift and go to state 41
    MOD             shift and go to state 42
    EQ              shift and go to state 43
    NE              shift and go to state 44
    GT              shift and go to state 45
    LT              shift and go to state 46


state 24

    (29) expression -> ID .

    COLON           reduce using rule 29 (expression -> ID .)
    PLUS            reduce using rule 29 (expression -> ID .)
    MINUS           reduce using rule 29 (expression -> ID .)
    MULT            reduce using rule 29 (expression -> ID .)
    DIV             reduce using rule 29 (expression -> ID .)
    MOD             reduce using rule 29 (expression -> ID .)
    EQ              reduce using rule 29 (expression -> ID .)
    NE              reduce using rule 29 (expression -> ID .)
    GT              reduce using rule 29 (expression -> ID .)
    LT              reduce using rule 29 (expression -> ID .)
    DEF             reduce using rule 29 (expression -> ID .)
    IF              reduce using rule 29 (expression -> ID .)
    FOR             reduce using rule 29 (expression -> ID .)
    WHILE           reduce using rule 29 (expression -> ID .)
    PRINT           reduce using rule 29 (expression -> ID .)
    ID              reduce using rule 29 (expression -> ID .)
    $end            reduce using rule 29 (expression -> ID .)
    ELIF            reduce using rule 29 (expression -> ID .)
    ELSE            reduce using rule 29 (expression -> ID .)
    RPAREN          reduce using rule 29 (expression -> ID .)
    COMMA           reduce using rule 29 (expression -> ID .)


state 25

    (30) expression -> NUMBER .

    COLON           reduce using rule 30 (expression -> NUMBER .)
    PLUS            reduce using rule 30 (expression -> NUMBER .)
    MINUS           reduce using rule 30 (expression -> NUMBER .)
    MULT            reduce using rule 30 (expression -> NUMBER .)
    DIV             reduce using rule 30 (expression -> NUMBER .)
    MOD             reduce using rule 30 (expression -> NUMBER .)
    EQ              reduce using rule 30 (expression -> NUMBER .)
    NE              reduce using rule 30 (expression -> NUMBER .)
    GT              reduce using rule 30 (expression -> NUMBER .)
    LT              reduce using rule 30 (expression -> NUMBER .)
    DEF             reduce using rule 30 (expression -> NUMBER .)
    IF              reduce using rule 30 (expression -> NUMBER .)
    FOR             reduce using rule 30 (expression -> NUMBER .)
    WHILE           reduce using rule 30 (expression -> NUMBER .)
    PRINT           reduce using rule 30 (expression -> NUMBER .)
    ID              reduce using rule 30 (expression -> NUMBER .)
    $end            reduce using rule 30 (expression -> NUMBER .)
    ELIF            reduce using rule 30 (expression -> NUMBER .)
    ELSE            reduce using rule 30 (expression -> NUMBER .)
    RPAREN          reduce using rule 30 (expression -> NUMBER .)
    COMMA           reduce using rule 30 (expression -> NUMBER .)


state 26

    (31) expression -> STRING .

    COLON           reduce using rule 31 (expression -> STRING .)
    PLUS            reduce using rule 31 (expression -> STRING .)
    MINUS           reduce using rule 31 (expression -> STRING .)
    MULT            reduce using rule 31 (expression -> STRING .)
    DIV             reduce using rule 31 (expression -> STRING .)
    MOD             reduce using rule 31 (expression -> STRING .)
    EQ              reduce using rule 31 (expression -> STRING .)
    NE              reduce using rule 31 (expression -> STRING .)
    GT              reduce using rule 31 (expression -> STRING .)
    LT              reduce using rule 31 (expression -> STRING .)
    DEF             reduce using rule 31 (expression -> STRING .)
    IF              reduce using rule 31 (expression -> STRING .)
    FOR             reduce using rule 31 (expression -> STRING .)
    WHILE           reduce using rule 31 (expression -> STRING .)
    PRINT           reduce using rule 31 (expression -> STRING .)
    ID              reduce using rule 31 (expression -> STRING .)
    $end            reduce using rule 31 (expression -> STRING .)
    ELIF            reduce using rule 31 (expression -> STRING .)
    ELSE            reduce using rule 31 (expression -> STRING .)
    RPAREN          reduce using rule 31 (expression -> STRING .)
    COMMA           reduce using rule 31 (expression -> STRING .)


state 27

    (18) for_statement -> FOR ID . IN RANGE LPAREN expression RPAREN COLON block

    IN              shift and go to state 47


state 28

    (19) while_statement -> WHILE expression . COLON block
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . MULT expression
    (35) expression -> expression . DIV expression
    (36) expression -> expression . MOD expression
    (37) expression -> expression . EQ expression
    (38) expression -> expression . NE expression
    (39) expression -> expression . GT expression
    (40) expression -> expression . LT expression

    COLON           shift and go to state 48
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    MULT            shift and go to state 40
    DIV             shift and go to state 41
    MOD             shift and go to state 42
    EQ              shift and go to state 43
    NE              shift and go to state 44
    GT              shift and go to state 45
    LT              shift and go to state 46


state 29

    (20) print_statement -> PRINT LPAREN . print_arguments RPAREN
    (21) print_arguments -> . expression
    (22) print_arguments -> . print_arguments COMMA expression
    (29) expression -> . ID
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression MULT expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression EQ expression
    (38) expression -> . expression NE expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression LT expression

    ID              shift and go to state 24
    NUMBER          shift and go to state 25
    STRING          shift and go to state 26

    print_arguments                shift and go to state 49
    expression                     shift and go to state 50

state 30

    (9) function_def -> DEF ID LPAREN . parameters RPAREN COLON block
    (10) parameters -> . ID
    (11) parameters -> . parameters COMMA ID
    (12) parameters -> .

    ID              shift and go to state 51
    RPAREN          reduce using rule 12 (parameters -> .)
    COMMA           reduce using rule 12 (parameters -> .)

    parameters                     shift and go to state 52

state 31

    (23) assignment_statement -> ID ASSIGN expression .
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . MULT expression
    (35) expression -> expression . DIV expression
    (36) expression -> expression . MOD expression
    (37) expression -> expression . EQ expression
    (38) expression -> expression . NE expression
    (39) expression -> expression . GT expression
    (40) expression -> expression . LT expression

    DEF             reduce using rule 23 (assignment_statement -> ID ASSIGN expression .)
    IF              reduce using rule 23 (assignment_statement -> ID ASSIGN expression .)
    FOR             reduce using rule 23 (assignment_statement -> ID ASSIGN expression .)
    WHILE           reduce using rule 23 (assignment_statement -> ID ASSIGN expression .)
    PRINT           reduce using rule 23 (assignment_statement -> ID ASSIGN expression .)
    ID              reduce using rule 23 (assignment_statement -> ID ASSIGN expression .)
    $end            reduce using rule 23 (assignment_statement -> ID ASSIGN expression .)
    ELIF            reduce using rule 23 (assignment_statement -> ID ASSIGN expression .)
    ELSE            reduce using rule 23 (assignment_statement -> ID ASSIGN expression .)
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    MULT            shift and go to state 40
    DIV             shift and go to state 41
    MOD             shift and go to state 42
    EQ              shift and go to state 43
    NE              shift and go to state 44
    GT              shift and go to state 45
    LT              shift and go to state 46


state 32

    (24) assignment_statement -> ID PLEQUAL expression .
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . MULT expression
    (35) expression -> expression . DIV expression
    (36) expression -> expression . MOD expression
    (37) expression -> expression . EQ expression
    (38) expression -> expression . NE expression
    (39) expression -> expression . GT expression
    (40) expression -> expression . LT expression

    DEF             reduce using rule 24 (assignment_statement -> ID PLEQUAL expression .)
    IF              reduce using rule 24 (assignment_statement -> ID PLEQUAL expression .)
    FOR             reduce using rule 24 (assignment_statement -> ID PLEQUAL expression .)
    WHILE           reduce using rule 24 (assignment_statement -> ID PLEQUAL expression .)
    PRINT           reduce using rule 24 (assignment_statement -> ID PLEQUAL expression .)
    ID              reduce using rule 24 (assignment_statement -> ID PLEQUAL expression .)
    $end            reduce using rule 24 (assignment_statement -> ID PLEQUAL expression .)
    ELIF            reduce using rule 24 (assignment_statement -> ID PLEQUAL expression .)
    ELSE            reduce using rule 24 (assignment_statement -> ID PLEQUAL expression .)
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    MULT            shift and go to state 40
    DIV             shift and go to state 41
    MOD             shift and go to state 42
    EQ              shift and go to state 43
    NE              shift and go to state 44
    GT              shift and go to state 45
    LT              shift and go to state 46


state 33

    (25) assignment_statement -> ID MIEQUAL expression .
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . MULT expression
    (35) expression -> expression . DIV expression
    (36) expression -> expression . MOD expression
    (37) expression -> expression . EQ expression
    (38) expression -> expression . NE expression
    (39) expression -> expression . GT expression
    (40) expression -> expression . LT expression

    DEF             reduce using rule 25 (assignment_statement -> ID MIEQUAL expression .)
    IF              reduce using rule 25 (assignment_statement -> ID MIEQUAL expression .)
    FOR             reduce using rule 25 (assignment_statement -> ID MIEQUAL expression .)
    WHILE           reduce using rule 25 (assignment_statement -> ID MIEQUAL expression .)
    PRINT           reduce using rule 25 (assignment_statement -> ID MIEQUAL expression .)
    ID              reduce using rule 25 (assignment_statement -> ID MIEQUAL expression .)
    $end            reduce using rule 25 (assignment_statement -> ID MIEQUAL expression .)
    ELIF            reduce using rule 25 (assignment_statement -> ID MIEQUAL expression .)
    ELSE            reduce using rule 25 (assignment_statement -> ID MIEQUAL expression .)
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    MULT            shift and go to state 40
    DIV             shift and go to state 41
    MOD             shift and go to state 42
    EQ              shift and go to state 43
    NE              shift and go to state 44
    GT              shift and go to state 45
    LT              shift and go to state 46


state 34

    (26) assignment_statement -> ID MTEQUAL expression .
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . MULT expression
    (35) expression -> expression . DIV expression
    (36) expression -> expression . MOD expression
    (37) expression -> expression . EQ expression
    (38) expression -> expression . NE expression
    (39) expression -> expression . GT expression
    (40) expression -> expression . LT expression
